# subspace-rerouting

./: .gitignore  README.md  TODO.md  api_queue.json  models.toml  pyproject.toml  quick_eval.py  run_probes.py  taplo.toml
README_files/libs/bootstrap/: bootstrap-baa3f8376f7ea40e8479461979d83d77.min.css
assets/: README.md  graph.dot
generated_jailbreaks/: funny_answers.md  gemma2_2b_attention.jsonl  gemma2_2b_attention_dazzle.jsonl  gemma2_2b_attention_full_ablation.jsonl  llama3.2_1b_attention_dazzle.jsonl  llama3.2_1b_probes.jsonl  llama3.2_1b_probes_short.jsonl  llama3.2_1b_steering_short.jsonl  llama3.2_3b_attention_dazzle.jsonl  llama3.2_3b_attention_full_ablation.jsonl  llama3.2_3b_attention_fullablation.jsonl  llama3.2_3b_probes.jsonl  qwen2.5_1.5b_attention.jsonl  qwen2.5_1.5b_probes.jsonl  qwen2.5_1.5b_probes_short.jsonl
generated_jailbreaks/filtered/: gemma2_2b_probes.jsonl  gemma2_2b_steering.jsonl  llama3.2_1b_probes.jsonl  llama3.2_1b_steering.jsonl  llama3.2_3b_steering.jsonl  qwen2.5_1.5b_steering.jsonl
paper/: README.md  checklist.typ  main.typ  neurips.typ  neurips_checklist.tex  neurips_version.typ  new.typ  original.typ  references.bib  sck_v2.typ  sck_v3.typ  ssr_schema.typ
reproduce_experiments/: component_attribution.ipynb  layer_diffs.ipynb  pca.ipynb  plot.py  plot_rerouting.ipynb  using_lens.ipynb
reproduce_experiments/gcg/: README.md  generate.py
reproduce_experiments/gcg/configs/: gemma2.toml  llama3.2_1b.toml  llama3.2_3b.toml
reproduce_experiments/gcg/results/: gemma2_2b.jsonl  llama3.2_1b.jsonl  llama3.2_3b.jsonl  qwen2.5_1.5b.jsonl
reproduce_experiments/multi_layers/: 1target_fails.jsonl  2targets_fails.jsonl  2targets_success.jsonl  3targets_success.jsonl  multi_layers.ipynb
reproduce_experiments/out_of_distribution_discussion/: short_suffix.jsonl  steering_out_of_distribution.ipynb
reproduce_experiments/run_ssr/: 11_second_run.jsonl  run_ssr_attention_dazzle.ipynb  run_ssr_attention_full.ipynb  run_ssr_attention_output.jsonl  run_ssr_probes.ipynb  run_ssr_probes_output.jsonl  run_ssr_steering.ipynb  run_ssr_steering_output.jsonl
ssr/: __init__.py  activate  classifiers.py  core.py  datasets.py  defaults.py  evaluation.py  files.py  gcg_utils.py  lens.py  memory.py  ssr_attention.py  ssr_probes.py  ssr_steering.py
ssr/attention/: __init__.py  attention_ssr.py
ssr/evaluation/: __init__.py  api.py  files.py  quick_eval.py  runner.py  scoring.py  types.py  utils.py
ssr/probes/: __init__.py  classifiers.py  init_probes.py  main.py  probe_ssr.py  probes_config.json
ssr/probes/probes/llama3.2_1b/: llama3.2_1b_0.pt  llama3.2_1b_1.pt  llama3.2_1b_10.pt  llama3.2_1b_11.pt  llama3.2_1b_12.pt  llama3.2_1b_13.pt  llama3.2_1b_14.pt  llama3.2_1b_15.pt  llama3.2_1b_2.pt  llama3.2_1b_3.pt  llama3.2_1b_4.pt  llama3.2_1b_5.pt  llama3.2_1b_6.pt  llama3.2_1b_7.pt  llama3.2_1b_8.pt  llama3.2_1b_9.pt  metadata.json
ssr/probes/probes/llama3.2_3b/: llama3.2_3b_0.pt  llama3.2_3b_1.pt  llama3.2_3b_10.pt  llama3.2_3b_11.pt  llama3.2_3b_12.pt  llama3.2_3b_13.pt  llama3.2_3b_14.pt  llama3.2_3b_15.pt  llama3.2_3b_16.pt  (+20 more)
ssr/steering/: __init__.py  steering_ssr.py
ssr/templates/: judge.jinja2
tests_ssr_v4/: llama3.2_1b_probes.jsonl
(+139 files in other folders)
