[project]
name = "subspace-rerouting"
version = "0.1.0"
description = ""
authors = [
    {name = "Sckathach",email = "thomas.winninger68@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "transformer-lens (>=2.15.0,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
mypy = "^1.15.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
matplotlib = "^3.10.1"
notebook = "^7.3.2"
plotly = "^6.0.0"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
ollama = "^0.4.7"
openai = "^1.65.4"

[tool.poetry.group.nanogcg]
optional = true

[tool.poetry.group.nanogcg.dependencies]
nanogcg = "^0.3.0"
bitsandbytes = "^0.45.3"

[tool.poetry]
package-mode = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "nanogcg.*",
    "plotly.*",
    "sklearn.*",
    "transformer_lens.*",
    "transformers.*",
]

[tool.pyright]
ignore = [
    "nanogcg",
    "plotly",
    "sklearn",
    "transformer_lens",
    "transformers",
]
